change import style.css

--- a/index.html
+++ b/index.html
@@ -2,54 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- bootstrapと独自styleの読み込み -->
     <link href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style/style.css">
+    <!-- bootstrapとjQueryの読み込み -->
     <script src="js/bootstrap.js"></script>
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.slim.js"
-    integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
-    crossorigin="anonymous"></script>
-    <title>カラーコード変換</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 
-    <style>
-      .no-spin::-webkit-inner-spin-button,
-      .no-spin::-webkit-outer-spin-button {
-        -webkit-appearance: none;
-        margin: 0;
-        -moz-appearance: textfield;
-      }
-
-      .result {
-        background-color: rgba(125, 219, 153, 0.49);
-        font-weight: bold;
-        border: none;
-        width: 180px;
-        height: 35px;
-        text-align: center;
-      }
-
-      .result :focus {
-        outline: none;
-      }
-
-      .range {
-        width: 300px;
-      }
-
-      .actionButton {
-        height: 30px;
-        line-height: 10px;
-        text-align: center;
-        vertical-align: middle;
-        margin-left: 10px;
-      }
-
-      .divColor {
-        width: 400px;
-        height: 200px;
-        background-color: rgba(125, 219, 153, 0.49);
-        margin: auto;
-      }
-    </style>
+    <title>change_color_code</title>
   </head>
 
   <body>
