import google adsence

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="js/bootstrap.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
 
+    <!-- google adsence読み込み -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8559692008280745" crossorigin="anonymous"></script>
+
     <title>change_color_code</title>
   </head>
 
