add meta tag google search

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="MdvU-hL_uZg7QgMYyKbA8w3lY5YuI37a1cvVVeOLh_c" />
     <!-- bootstrapと独自styleの読み込み -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style/style.css">
