--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
   </head>
 
   <body>
-    <a href="https://px.a8.net/svt/ejp?a8mat=3N1YIM+25EDF6+CO4+6BU5T" rel="nofollow">
-      <img border="0" width="728" height="90" alt="" src="https://www29.a8.net/svt/bgt?aid=220121086130&wid=001&eno=01&mid=s00000001642001063000&mc=1"></a>
-      <img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3N1YIM+25EDF6+CO4+6BU5T" alt="">
+    <header style="text-align: center;">
+      <a href="https://px.a8.net/svt/ejp?a8mat=3N1YIM+25EDF6+CO4+6BU5T" rel="nofollow">
+        <img border="0" width="728" height="90" alt="" src="https://www29.a8.net/svt/bgt?aid=220121086130&wid=001&eno=01&mid=s00000001642001063000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www12.a8.net/0.gif?a8mat=3N1YIM+25EDF6+CO4+6BU5T" alt="">
+    </header>
+
     <br>
 
     <main class="main" style="margin: 10px 10px">
@@ -134,9 +137,12 @@
     </main>
 
     <br>
-    <a href="https://px.a8.net/svt/ejp?a8mat=3N1YIM+3U4L4I+4JGQ+BXIYP" rel="nofollow">
-      <img border="0" width="728" height="90" alt="" src="https://www21.a8.net/svt/bgt?aid=220121086232&wid=001&eno=01&mid=s00000021185002004000&mc=1"></a>
-      <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3N1YIM+3U4L4I+4JGQ+BXIYP" alt="">
+
+    <footer style="text-align: center;">
+      <a href="https://px.a8.net/svt/ejp?a8mat=3N1YIM+3U4L4I+4JGQ+BXIYP" rel="nofollow">
+        <img border="0" width="728" height="90" alt="" src="https://www21.a8.net/svt/bgt?aid=220121086232&wid=001&eno=01&mid=s00000021185002004000&mc=1"></a>
+        <img border="0" width="1" height="1" src="https://www19.a8.net/0.gif?a8mat=3N1YIM+3U4L4I+4JGQ+BXIYP" alt="">
+    </footer>
   </body>
 
   <script type="text/javascript">
