--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
               </label>
             </td>
             <td>
+              <button type="button" class="btn btn-outline-primary actionButton" id="changeButton" onclick="changeCode();">変換</button>
+            </td>
+            <td>
               <button type="button" class="btn btn-outline-primary actionButton" onclick="location.reload();">リセット</button>
             </td>
           </tr>
